Opened 13 years ago

Closed 10 years ago

#8805 closed bug (fixed)

FileType attempts to use a folder as the preferred application.

Reported by: mmadia Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Preferences/FileTypes Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev44418.

This bug applies to both the Tracker Add-on and the standalone preflet.

In Tracker, right click a file and open it with the FileType add-on. Press the "Select" button for "Preferred application". At least on hrev44418, the file listing will be activated by default. Use keyboard navigation to select a folder. Press Enter. This results in an info alert of "Could not retrieve application signature"

The expected behavior is to enter that folder and not attempt to use it as the preferred application. For comparison, StyledEdit's File-->Open panel works as expected.

Change History (4)

comment:1 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48399.

comment:2 by axeld, 10 years ago

Resolution: fixed
Status: closedreopened

Reopened, as the applied patch does introduce a number of regressions: the file panel is used for other things, too, and there, directories are required (ie. "open" and "same as").

comment:3 by axeld, 10 years ago

Owner: changed from axeld to pulkomandy
Status: reopenedassigned

comment:4 by pulkomandy, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed again in hrev48434.

Note: See TracTickets for help on using tickets.